--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "git-actions-demo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wiseqingyang.github.io/git-actions-demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
